--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
 }
+
+@media screen and (max-width: 500px)
+{
+  .main img{
+    width: 60%;
+  }
+}
